fixing a mobile layout issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -173,7 +173,7 @@ body{
   .form-field-text{
     width:94.5%;
     height:30px;
-    margin-bottom:7px;
+    margin-bottom:3px;
   }
   .searchFormSubmit{
     width: 91.5% !important;
